--- a/style.css
+++ b/style.css
@@ -637,3 +637,101 @@ footer {
 .blue-btn:hover {
     transform: none;
 }
+
+.footer-bar {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
+
+  .contact-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .contact-info a, .contact-info p {
+    margin: 0 10px;
+    color: #fff;
+    text-decoration: none;
+  }
+
+  /* notice section */
+  .floater-icon {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    font-size: 1.5em;
+    cursor: pointer;
+    z-index: 1000;
+    animation: floatIcon 2s infinite linear;
+  }
+
+  @keyframes floatIcon {
+    0% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+    50% {
+      transform: translateY(20px);
+      opacity: 0.5;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+
+
+
+  .floater-notice {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    max-width: 300px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    z-index: 1000;
+  }
+
+  .floater-content {
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .notice-image {
+    max-height: 60px;
+    overflow: hidden;
+    border-radius: 8px;
+    margin-right: 10px;
+  }
+
+  .notice-image img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+  }
+
+  .notice-title {
+    flex-grow: 1;
+    font-size: 1.2em;
+    font-weight: bold;
+  }
+
+  .close-button {
+    cursor: pointer;
+    font-size: 1.5em;
+    color: #888;
+  }
+  /* end of notice section */
